samples/_failures_safe/1761501140_affa3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f212ac89.c:128:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  128 | enum Operation get
      |      ^~~~~~~~~
